# commencement_speeches

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
overrides/: video_platforms.yaml  youtube_channels.yaml
scripts/: migrate_to_3nf.py
skills/commencement-speaker-list-finder/: .gitignore  SKILL.md  requirements.txt
skills/commencement-speaker-list-finder/examples/: r1_pilot_institutions.csv  sample_institutions.csv
skills/commencement-speaker-list-finder/reference/: csv_schema.md  known_good_lists.csv  page_shapes.md  url_patterns.md
skills/commencement-speaker-list-finder/scripts/: batch_catalog.py  classify_page.py  detect_shape.py  enumerate_urls.py  fetch.py  probe_institution.py  tavily_search.py
skills/commencement-speaker-list-finder/tests/: test_classifier.py  test_detect_shape.py  test_url_enumeration.py
src/commencement/: cli.py  config.py  export.py  manual.py
src/commencement/common/: http_client.py  logging.py  normalize.py  rate_limit.py  robots.py
src/commencement/db/: __init__.py  models.py  session.py
src/commencement/discovery/: flow.py  step1_speaker.py  step2_transcript_link.py  step3_video_link.py
src/commencement/llm/: extract.py
src/commencement/search/: __init__.py  base.py  tavily_provider.py
src/commencement/stage0_frame/: flow.py  ipeds_download.py  load_frame.py  stratify.py
tests/: test_3nf_schema.py  test_blob_store.py  test_manual_video.py  test_mode_filters.py  test_normalize.py  test_scoped_search.py  test_stratify.py  test_video_filters.py  test_year_parameterization.py
(+7 files in other folders)
