[project]
name = "commencement-corpus"
version = "0.1.0"
description = "2026 US commencement speech corpus pilot: speaker identity + transcript/video link discovery."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "requests>=2.31",
    "tenacity>=8.2",
    "trafilatura>=1.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "tldextract>=5.1",
    "anthropic>=0.30",
    "tavily-python>=0.3",
    "yt-dlp>=2024.4.9",
    "prefect>=2.16",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
commencement = "commencement.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
